# SPB_FINAL

./: .gitignore  CLEANUP_PLAN.md  CONVERSATION_SUMMARY_2026-03-07.md  E2E_TEST_PLAN.md  END_TO_END_TEST_REPORT.md  FULL_INTEGRATION_TEST.md  GIT_CONFIGURATION.md  IBM_MQ_SETUP.md  INSTALLATION_GUIDE.html  INSTALLATION_GUIDE.md  PRESENTATION_README.md  PROJECTS_OVERVIEW.md  PYTHON312_SETUP.md  README.md  SESSION_2026-03-10.md  SESSION_2026-03-11_PROFILES.md  SPBSITE_ACCESS_INFO.txt  SPB_Message_Flow_Integration.pptx  SQLITE_REMOVAL_CHANGES.md  TEST_OVERVIEW.md  VSCODE_GUIDE.md  bacen_simulator.py  check_keys.py  create_databases.py  create_message_flow_presentation.py  install_spb_system.ps1  install_spb_system.sh  install_spbsite_service.sh  live_test.sh  migrate_catalog.py  monitor_flow.py  monitor_live.py  session.md  setup_catalog_schema.py  setup_mq_ubuntu.sh  start_spbsite_remote.sh  test_actual_render.py  test_filter.py  test_mq_ubuntu.py  test_template_render.py  (+3 more)
BCSrvSqlMq/: .gitignore  .vcpkg_path  BACEN_AUTO_RESPONDER_INTEGRATION.md  BCSrvSqlMq.ini  BCSrvSqlMq.ini.example  DATABASE_SETUP_COMPLETE.md  MESSAGE_FLOWS.html  MESSAGE_FLOWS.md  SESSION_HANDOFF.md  SESSION_NOTES.md  SETUP_COMPLETE.md  bacen_auto_responder.py  db_simulator.py  load_catalog_from_xsd.py  mq_36266751.mqsc  setup_database.py  setup_mq_36266751.cmd  setup_mq_queues_complete.cmd  test_integration.py  test_message_flow.py  verify_db_config.py  verify_mq_config.py
BCSrvSqlMq/OLD/: BCSrvSqlMq.rc  BacenAppRS.cpp  BacenAppRS.h  BacenREQ.cpp  BacenRSP.cpp  BacenRep.cpp  BacenRep.h  BacenReq.h  BacenRsp.h  BacenSup.cpp  BacenSup.h  CBCDb.h  CLEANUP_PROJECT.bat  CMakeLists.txt  ControleRS.cpp  ControleRS.h  DIAGNOSIS_SUMMARY.md  IFAppRS.cpp  IFAppRS.h  IFREP.cpp  IFREQ.cpp  IFRSP.cpp  IFRep.h  IFReq.h  IFRsp.h  IFSUP.cpp  IFSup.h  InitSrv.cpp  InitSrv.h  MIGRATION_SUMMARY.md  MainSrv.cpp  MainSrv.h  Monitor.cpp  Monitor.h  MsgSgr.h  OpenSSLWrapper.cpp  OpenSSLWrapper.h  PROJECT_ORGANIZATION.md  QUICK_REFERENCE.md  Resource.h  (+22 more)
BCSrvSqlMq/OLD/Archive/BackupFiles/: README.md  cmqc.h.STUB_BACKUP
BCSrvSqlMq/OLD/Archive/OldBinaries/: README.md
BCSrvSqlMq/OLD/BCMsgSqlMq/: BCMsgSqlMq.cpp  BCMsgSqlMq.h  CMakeLists.txt  README.md
BCSrvSqlMq/OLD/DOCS/: CLEANUP.md  CLEANUP_SUMMARY.md  CODE_REVIEW_POSTGRESQL.md  COMANDOS-RAPIDOS.txt  CONFIGURACAO.md  CONFIG_GUIDE.md  CONVERSATION_SUMMARY.md  CRYPTLIB_TO_OPENSSL_ANALYSIS.md  CRYPTLIB_TO_OPENSSL_MIGRATION.md  DAILY_SUMMARY_2026-02-22.md  DEPENDENCY_ANALYSIS_PHASE6.md  FINAL_VERIFICATION_COMPLETE.md  FOLDER_STRUCTURE.md  IBM_MQ_SETUP_COMPLETE.html  IBM_MQ_SETUP_COMPLETE.md  INSTALL_MFC_GUIDE.md  INSTALL_STATUS.md  MFC_INSTALL_GUIDE.md  MIGRATION_COMPLETE_x64.md  MIGRATION_INFO.md  MIGRATION_STATUS_FINAL.md  MODERNIZATION_PHASE2.md  MODERNIZATION_PHASE3.md  MODERNIZATION_PHASE4.md  MODERNIZATION_PHASE5.md  MSXML_TO_PUGIXML_MIGRATION_GUIDE.md  OPENSSL_MIGRATION_COMPLETE.md  OPENSSL_QUICK_REFERENCE.md  PASSWORD_RESET_GUIDE.md  PHASE6_COMPLETION_SUMMARY.md  PHASE6_FINAL_REPORT.md  PHASE6_PROGRESS.md  PHASE6_SESSION_SUMMARY.md  PHASE6_SETUP_GUIDE.md  POSTGRESQL_MIGRATION.md  POSTGRESQL_SETUP_GUIDE.md  PSQLODBC_VERIFICATION_REPORT.md  QUICK_BUILD_STEPS.txt  QUICK_START.md  README.md  (+12 more)
BCSrvSqlMq/OLD/DOCS/Archive/: CRYPTO_TEST_README.md  MQ_SETUP_GUIDE.md  REBUILD_INSTRUCTIONS.md
BCSrvSqlMq/OLD/Homologa/: GenerateCSR.bat  GeneratePFX.bat  SPBT006.csr  execucao.txt
BCSrvSqlMq/OLD/Scripts/: CLEANUP_SCRIPTS.bat  INICIAR-RAPIDO.bat  INICIAR.bat  INSTALAR.bat  InstalarSimples.bat  README.md  TESTAR-CRYPTO.bat  TESTAR-CRYPTO.ps1  VER-LOG.bat  rebuild_and_deploy.bat  send_test_message.bat  send_test_message.ps1  setup_database.bat  setup_mq_queues.bat  start_mq.bat  test_console_mode.bat  verify_complete_setup.ps1
BCSrvSqlMq/OLD/Scripts/Archive/: README.md
BCSrvSqlMq/OLD/Scripts/Archive/Troubleshooting/: RESTART-AND-CHECK.bat  add_system_to_mqm.bat  check_current_permissions.bat  check_latest_log.bat  check_mq_errors.bat  check_mq_queues.bat  check_mq_queues_debug.bat  check_mqm_group.bat  check_queue_managers.bat  check_queues.ps1  check_queues_ultra_simple.bat  check_remote_queues.bat  create_all_16_queues.bat  debug_error_2085.ps1  diagnose_mq_permissions.bat  diagnose_queue_mismatch.bat  disable_mq_trace.bat  enable_mq_trace.bat  fix_mq_permissions.bat  grant_permissions_each_queue.bat  grant_permissions_nt_authority.bat  grant_permissions_to_system.bat  list_all_queues.ps1  list_all_queues_simple.bat  rebuild_with_real_headers.bat  show_service_account.bat  test_rebuilt_binary.bat  verify_all_queues.ps1  view_log_quick.bat
BCSrvSqlMq/OLD/tools/: README_PFX_CONVERSION.md  convert_pfx_to_pem.bat  convert_pfx_to_pem.ps1
Carga_Mensageria/: .env.example  README.md  SESSION_NOTES.md  UNIFIED_CATALOG_GUIDE.md  config.py  conversation_log.md  create_unified_catalog.py  db_connection.py  emissor.txt  etapas.py  import_from_mdb.py  import_from_xsd.py  init_database.py  main.py  migrate_to_unified_catalog.py  requirements.txt  spbmodelo.xsl  xml_generator.py
Docs/: ARCHITECTURE_VERIFICATION.html  ARCHITECTURE_VERIFICATION.md  BCSRVSQLMQ_INTEGRATION.md  COMPLETE_INTEGRATION_SUMMARY.md  E2E_TEST_EXECUTION_REPORT.md  IBM_MQ_SETUP_GUIDE.md  IBM_MQ_SETUP_UBUNTU.md  IBM_MQ_UBUNTU_SETUP.md  INTEGRATION_SUCCESS_REPORT.md  LIVE_TEST_GUIDE.md  MESSAGE_FLOWS.html  MESSAGE_FLOWS.md  MESSAGE_FLOW_TEST.md  MIGRATION_GUIDE.md  MQ_QUICK_REFERENCE.md  POSTGRESQL_SETUP.md  PROJECTS_OVERVIEW.html  PROJECTS_OVERVIEW.md  PROJECT_CLEANUP_SUMMARY.md  QUICK_INSTALL.md  README.md  REMOTE_ACCESS_SPBSITE.md  SESSION_2026-04-11.md  SPB_E2E_DIAGRAM.html  SPB_E2E_DIAGRAM.md  SPB_LINUX_IMPLEMENTATION.html  SPB_LINUX_IMPLEMENTATION.md  UBUNTU_DEPLOYMENT_GUIDE.md
spb-shared/: requirements.txt  setup.py
spbsite/: .env.example  CLEANUP_SUMMARY.md  CONVERSATION_STATE.md  SESSION_NOTES.md  TEST_PLAN.md  create_users_table.py  migrate_add_profiles.py  pyproject.toml  requirements.txt  test_endpoint.py
test_scripts/: README.md  auto_test.py  browse_mq_queue.py  check_mq_status.py  comprehensive_e2e_test.py  (+9 more)
(+184 files in other folders)
